--- a/index.html
+++ b/index.html
@@ -4,38 +4,48 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
-    <link rel="stylesheet" href="./styles/mystyles.css">
+    <title>Task Management Dashboard</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="./styles/base.css">
+    <link rel="stylesheet" href="./styles/layout.css">
+    <link rel="stylesheet" href="./styles/animations.css">
+    <link rel="stylesheet" href="./styles/forms.css">
+    <link rel="stylesheet" href="./styles/buttons.css">
+    <link rel="stylesheet" href="./styles/modals.css">
+    <link rel="stylesheet" href="./styles/tasks.css">
+    <link rel="stylesheet" href="./styles/responsive.css">
 </head>
 
 <body>
     <main>
-        <section id="list">A</section>
+        <section id="list"></section>
         <section id="form">
             <div class="mb-3">
-                <label class="form-label">Title</label>
-                <input type="text" class="form-control" id="inputTitle">
+                <label for="inputTitle" class="form-label">Task Title</label>
+                <input type="text" class="form-control" id="inputTitle" placeholder="e.g. Project kickoff">
             </div>
             <div class="mb-3">
-                <label class="form-label">Description</label>
-                <textarea rows="3" class="form-control" id="inputDescription"></textarea>
+                <label for="inputNotes" class="form-label">Notes (Optional)</label>
+                <textarea rows="3" class="form-control" id="inputNotes" placeholder="e.g. Finish writing presentation..."></textarea>
             </div>
             <div class="mb-3">
-                <label class="form-label">Color</label>
-                <div class="color-input-container">
-                    <input type="color" id="inputColor">
-                </div>
-            </div>
+                <label for="inputPriority" class="form-label">Priority</label>
+                <select id="inputPriority" class="form-control">
+                    <option value="">Select Priority</option>
+                    <option value="low">Low Priority</option>
+                    <option value="medium">Medium Priority</option>
+                    <option value="high">High Priority</option>
+                    <option value="urgent">Urgent</option>
+                </select>
             </div>
             <div class="mb-3">
-                <label class="form-label">Start Date</label>
-                <input type="datetime-local" class="form-control" id="inputDate">
+                <label for="inputDueDate" class="form-label">Due Date</label>
+                <input type="datetime-local" class="form-control" id="inputDueDate">
             </div>
             <div class="mb-3">
-                <label class="form-label">Status</label>
-                <select id="inputStatus">
+                <label for="inputStatus" class="form-label">Status</label>
+                <select id="inputStatus" class="form-control">
                     <option value="">Select</option>
                     <option>New</option>
                     <option>In Progress</option>
@@ -44,8 +54,8 @@
                 </select>
             </div>
             <div class="mb-3">
-                <label class="form-label">Budget</label>
-                <input type="number" class="form-control" id="inputBudget">
+                <label for="inputBudget" class="form-label">Budget (Optional)</label>
+                <input type="number" class="form-control" id="inputBudget" placeholder="Enter amount in USD">
             </div>
             <button class="btn btn-dark" type="submit" id="btnSave">Save Task</button>
         </section>
@@ -53,6 +63,9 @@
 
     <script src="https://code.jquery.com/jquery-3.7.1.js"
         integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
     <script src="./scripts/app.js"></script>
 </body>
 
